(fix) add override for modal's disappearing scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -129,3 +129,7 @@ label {
 .warning {
   color: red;
 }
+
+.modal-open {
+    overflow-y: scroll;
+}
